tests/vendor/valid/simple/goto_label_main_2.c
//expect 1
//tags: simple, goto
int main() {
    goto _main;
    return 0;
    _main:
        return 1;
}