tests/vendor/invalid/syntax/do_extra_semicolon.c
//tags: simple, loop
int main() {
    do {
        int a;
    }; while(1);
    return 0;
}